--- a/Nexitally_rules.yml
+++ b/Nexitally_rules.yml
@@ -768,6 +768,58 @@ rules:
   - DOMAIN-SUFFIX,openaicomproductionae4b.blob.core.windows.net,🤖 OpenAI
   - DOMAIN-SUFFIX,openaicom-api-bdcpf8c6d2e9atf6.z01.azurefd.net,🤖 OpenAI
   - DOMAIN-SUFFIX,openaicomproductionae4b.blob.core.windows.net,🤖 OpenAI
+  - DOMAIN-SUFFIX,gamer.com.tw,📺 Asian-Media
+  - DOMAIN-SUFFIX,bahamut.com.tw,📺 Asian-Media
+  - DOMAIN-SUFFIX,hinet.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,fbcdn.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,gvt1.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,digicert.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,viblast.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,44wilhpljf.execute-api.ap-southeast-1.amazonaws.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,bcbolthboa-a.akamaihd.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,dai3fd1oh325y.cloudfront.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,hboasia1-i.akamaihd.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,hboasia2-i.akamaihd.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,hboasia3-i.akamaihd.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,hboasia4-i.akamaihd.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,hboasia5-i.akamaihd.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,hboasialive.akamaized.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,hbogoprod-vod.akamaized.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,hbolb.onwardsmg.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,hbounify-prod.evergent.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,hbogoasia.hk,📺 Asian-Media
+  - DOMAIN-SUFFIX,hbogoasia.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,bigbigchannel.com.hk,📺 Asian-Media
+  - DOMAIN-SUFFIX,bigbigshop.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,content.jwplatform.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,encoretvb.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,mytvsuper.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,mytvsuperlimited.hb.omtrdc.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,mytvsuperlimited.sc.omtrdc.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,tvb.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,tvb.com.au,📺 Asian-Media
+  - DOMAIN-SUFFIX,tvbanywhere.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,tvbanywhere.com.sg,📺 Asian-Media
+  - DOMAIN-SUFFIX,tvbc.com.cn,📺 Asian-Media
+  - DOMAIN-SUFFIX,tvbeventpower.com.hk,📺 Asian-Media
+  - DOMAIN-SUFFIX,tvbusa.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,tvbweekly.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,tvmedia.net.au,📺 Asian-Media
+  - DOMAIN-SUFFIX,videos-f.jwpsrv.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,myvideo.net.tw,📺 Asian-Media
+  - DOMAIN-SUFFIX,kktv.com.tw,📺 Asian-Media
+  - DOMAIN-SUFFIX,kktv.me,📺 Asian-Media
+  - DOMAIN-SUFFIX,kk.stream,📺 Asian-Media
+  - DOMAIN-SUFFIX,chocotv.com.tw,📺 Asian-Media
+  - DOMAIN-SUFFIX,line-cdn.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,line-scdn.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,linetv.tw,📺 Asian-Media
+  - DOMAIN-SUFFIX,litv.tv,📺 Asian-Media
+  - DOMAIN-SUFFIX,LiTV.tv,📺 Asian-Media
+  - DOMAIN-SUFFIX,cdn.hinet.net,📺 Asian-Media
+  - DOMAIN-SUFFIX,viu.tv,📺 Asian-Media
+  - DOMAIN-SUFFIX,viu.com,📺 Asian-Media
+  - DOMAIN-SUFFIX,viu.now.com,📺 Asian-Media
   - DOMAIN-SUFFIX,1drv.com,🖥 Microsoft
   - DOMAIN-SUFFIX,aadrm.com,🖥 Microsoft
   - DOMAIN-SUFFIX,acompli.com,🖥 Microsoft
@@ -976,58 +1028,108 @@ rules:
   - DOMAIN-SUFFIX,twitter.com,🐦 Twitter
   - DOMAIN-SUFFIX,twitter.jp,🐦 Twitter
   - DOMAIN-SUFFIX,vine.co,🐦 Twitter
-  - DOMAIN-SUFFIX,gamer.com.tw,📺 Asian-Media
-  - DOMAIN-SUFFIX,bahamut.com.tw,📺 Asian-Media
-  - DOMAIN-SUFFIX,hinet.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,fbcdn.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,gvt1.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,digicert.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,viblast.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,44wilhpljf.execute-api.ap-southeast-1.amazonaws.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,bcbolthboa-a.akamaihd.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,dai3fd1oh325y.cloudfront.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,hboasia1-i.akamaihd.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,hboasia2-i.akamaihd.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,hboasia3-i.akamaihd.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,hboasia4-i.akamaihd.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,hboasia5-i.akamaihd.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,hboasialive.akamaized.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,hbogoprod-vod.akamaized.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,hbolb.onwardsmg.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,hbounify-prod.evergent.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,hbogoasia.hk,📺 Asian-Media
-  - DOMAIN-SUFFIX,hbogoasia.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,bigbigchannel.com.hk,📺 Asian-Media
-  - DOMAIN-SUFFIX,bigbigshop.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,content.jwplatform.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,encoretvb.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,mytvsuper.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,mytvsuperlimited.hb.omtrdc.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,mytvsuperlimited.sc.omtrdc.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,tvb.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,tvb.com.au,📺 Asian-Media
-  - DOMAIN-SUFFIX,tvbanywhere.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,tvbanywhere.com.sg,📺 Asian-Media
-  - DOMAIN-SUFFIX,tvbc.com.cn,📺 Asian-Media
-  - DOMAIN-SUFFIX,tvbeventpower.com.hk,📺 Asian-Media
-  - DOMAIN-SUFFIX,tvbusa.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,tvbweekly.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,tvmedia.net.au,📺 Asian-Media
-  - DOMAIN-SUFFIX,videos-f.jwpsrv.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,myvideo.net.tw,📺 Asian-Media
-  - DOMAIN-SUFFIX,kktv.com.tw,📺 Asian-Media
-  - DOMAIN-SUFFIX,kktv.me,📺 Asian-Media
-  - DOMAIN-SUFFIX,kk.stream,📺 Asian-Media
-  - DOMAIN-SUFFIX,chocotv.com.tw,📺 Asian-Media
-  - DOMAIN-SUFFIX,line-cdn.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,line-scdn.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,linetv.tw,📺 Asian-Media
-  - DOMAIN-SUFFIX,litv.tv,📺 Asian-Media
-  - DOMAIN-SUFFIX,LiTV.tv,📺 Asian-Media
-  - DOMAIN-SUFFIX,cdn.hinet.net,📺 Asian-Media
-  - DOMAIN-SUFFIX,viu.tv,📺 Asian-Media
-  - DOMAIN-SUFFIX,viu.com,📺 Asian-Media
-  - DOMAIN-SUFFIX,viu.now.com,📺 Asian-Media
+  
+  - DOMAIN-SUFFIX,max.com,📺 International-Media
+  - DOMAIN-SUFFIX,maxgo.com,📺 International-Media
+  - DOMAIN-SUFFIX,hbo.com,📺 International-Media
+  - DOMAIN-SUFFIX,hbonow.com,📺 International-Media
+  - DOMAIN-SUFFIX,hbogo.com,📺 International-Media
+  - DOMAIN-SUFFIX,hbomax.com,📺 International-Media
+  - DOMAIN-SUFFIX,hbomaxcdn.com,📺 International-Media
+  - DOMAIN-SUFFIX,forthethrone.com,📺 International-Media
+  - DOMAIN-SUFFIX,cinemax.com,📺 International-Media
+  - DOMAIN-SUFFIX,control.kochava.com,📺 International-Media
+  - DOMAIN-SUFFIX,d151l6v8er5bdm.cloudfront.net,📺 International-Media
+  - DOMAIN-SUFFIX,d1sgwhnao7452x.cloudfront.net,📺 International-Media
+  - DOMAIN-SUFFIX,dazn-api.com,📺 International-Media
+  - DOMAIN-SUFFIX,dazn.com,📺 International-Media
+  - DOMAIN-SUFFIX,dazndn.com,📺 International-Media
+  - DOMAIN-SUFFIX,dc2-vodhls-perform.secure.footprint.net,📺 International-Media
+  - DOMAIN-SUFFIX,dca-ll-livedazn-dznlivejp.s.llnwi.net,📺 International-Media
+  - DOMAIN-SUFFIX,dcalivedazn.akamaized.net,📺 International-Media
+  - DOMAIN-SUFFIX,dcblivedazn.akamaized.net,📺 International-Media
+  - DOMAIN-SUFFIX,indazn.com,📺 International-Media
+  - DOMAIN-SUFFIX,indaznlab.com,📺 International-Media
+  - DOMAIN-SUFFIX,intercom.io,📺 International-Media
+  - DOMAIN-SUFFIX,logx.optimizely.com,📺 International-Media
+  - DOMAIN-SUFFIX,s.yimg.jp,📺 International-Media
+  - DOMAIN-SUFFIX,sentry.io,📺 International-Media
+  - DOMAIN-SUFFIX,d1v5ir2lpwr8os.cloudfront.net,📺 International-Media
+  - DOMAIN-SUFFIX,d22qjgkvxw22r6.cloudfront.net,📺 International-Media
+  - DOMAIN-SUFFIX,d25xi40x97liuc.cloudfront.net,📺 International-Media
+  - DOMAIN-SUFFIX,d27xxe7juh1us6.cloudfront.net,📺 International-Media
+  - DOMAIN-SUFFIX,dmqdd6hw24ucf.cloudfront.net,📺 International-Media
+  - DOMAIN-SUFFIX,atv-ext-eu.amazon.com,📺 International-Media
+  - DOMAIN-SUFFIX,atv-ext-fe.amazon.com,📺 International-Media
+  - DOMAIN-SUFFIX,atv-ext.amazon.com,📺 International-Media
+  - DOMAIN-SUFFIX,atv-ps-eu.amazon.co.uk,📺 International-Media
+  - DOMAIN-SUFFIX,atv-ps-eu.amazon.com,📺 International-Media
+  - DOMAIN-SUFFIX,atv-ps-fe.amazon.co.jp,📺 International-Media
+  - DOMAIN-SUFFIX,atv-ps-fe.amazon.com,📺 International-Media
+  - DOMAIN-SUFFIX,atv-ps.amazon.com,📺 International-Media
+  - DOMAIN-SUFFIX,aiv-cdn.net,📺 International-Media
+  - DOMAIN-SUFFIX,aiv-delivery.net,📺 International-Media
+  - DOMAIN-SUFFIX,amazonprimevideo.cn,📺 International-Media
+  - DOMAIN-SUFFIX,amazonprimevideo.com.cn,📺 International-Media
+  - DOMAIN-SUFFIX,amazonprimevideos.com,📺 International-Media
+  - DOMAIN-SUFFIX,amazonvideo.cc,📺 International-Media
+  - DOMAIN-SUFFIX,amazonvideo.com,📺 International-Media
+  - DOMAIN-SUFFIX,atv-ps.amazon.com,📺 International-Media
+  - DOMAIN-SUFFIX,avodmp4s3ww-a.akamaihd.net,📺 International-Media
+  - DOMAIN-SUFFIX,fls-na.amazon.com,📺 International-Media
+  - DOMAIN-SUFFIX,pv-cdn.net,📺 International-Media
+  - DOMAIN-SUFFIX,video.a2z.com,📺 International-Media
+  - DOMAIN-SUFFIX,media-amazon.com,📺 International-Media
+  - DOMAIN-SUFFIX,prime-video.com,📺 International-Media
+  - DOMAIN-SUFFIX,primevideo.com,📺 International-Media
+  - DOMAIN-SUFFIX,primevideo.org,📺 International-Media
+  - DOMAIN-SUFFIX,primevideo.tv,📺 International-Media
+  - DOMAIN-SUFFIX,abema.io,📺 International-Media
+  - DOMAIN-SUFFIX,abema.tv,📺 International-Media
+  - DOMAIN-SUFFIX,abema-tv.com,📺 International-Media
+  - DOMAIN-SUFFIX,ds-linear-abematv.akamaized.net,📺 International-Media
+  - DOMAIN-SUFFIX,linear-abematv.akamaized.net,📺 International-Media
+  - DOMAIN-SUFFIX,ds-vod-abematv.akamaized.net,📺 International-Media
+  - DOMAIN-SUFFIX,vod-abematv.akamaized.net,📺 International-Media
+  - DOMAIN-SUFFIX,ameba.jp,📺 International-Media
+  - DOMAIN-SUFFIX,hayabusa.io,📺 International-Media
+  - DOMAIN-SUFFIX,mobile-collector.newrelic.com,📺 International-Media
+  - DOMAIN-SUFFIX,vod-abematv.akamaized.net,📺 International-Media
+  - DOMAIN-SUFFIX,bucketeer.jp,📺 International-Media
+  - DOMAIN-SUFFIX,abema.adx.promo,📺 International-Media
+  - DOMAIN-SUFFIX,hayabusa.media,📺 International-Media
+  - DOMAIN-SUFFIX,x-live-fox-stgec.uplynk.com,📺 International-Media
+  - DOMAIN-SUFFIX,fox.com,📺 International-Media
+  - DOMAIN-SUFFIX,foxdcg.com,📺 International-Media
+  - DOMAIN-SUFFIX,theplatform.com,📺 International-Media
+  - DOMAIN-SUFFIX,cdn-fox-networks-group-green.akamaized.net,📺 International-Media
+  - DOMAIN-SUFFIX,d3cv4a9a9wh0bt.cloudfront.net,📺 International-Media
+  - DOMAIN-SUFFIX,foxsports01-i.akamaihd.net,📺 International-Media
+  - DOMAIN-SUFFIX,foxsports02-i.akamaihd.net,📺 International-Media
+  - DOMAIN-SUFFIX,foxsports03-i.akamaihd.net,📺 International-Media
+  - DOMAIN-SUFFIX,nfl.com,📺 International-Media
+  - DOMAIN-SUFFIX,content-ause1-ur-discovery1.uplynk.com,📺 International-Media
+  - DOMAIN-SUFFIX,disco-api.com,📺 International-Media
+  - DOMAIN-SUFFIX,discoveryplus.com,📺 International-Media
+  - DOMAIN-SUFFIX,x-default-stgec.uplynk.com,📺 International-Media
+  - DOMAIN-SUFFIX,discovery.com,📺 International-Media
+  - DOMAIN-SUFFIX,discoveryplus.co.uk,📺 International-Media
+  - DOMAIN-SUFFIX,getblueshift.com,📺 International-Media
+  - DOMAIN-SUFFIX,litix.io,📺 International-Media
+  - DOMAIN-SUFFIX,mobile-collector.newrelic.com,📺 International-Media
+  - DOMAIN-SUFFIX,discovery.uplynk.com,📺 International-Media
+  - DOMAIN-SUFFIX,paramountplus.com,📺 International-Media
+  - DOMAIN-SUFFIX,cbsi.live.ott.irdeto.com,📺 International-Media
+  - DOMAIN-SUFFIX,cbsplaylistserver.aws.syncbak.com,📺 International-Media
+  - DOMAIN-SUFFIX,cbsservice.aws.syncbak.com,📺 International-Media
+  - DOMAIN-SUFFIX,link.theplatform.com,📺 International-Media
+  - DOMAIN-SUFFIX,cbsaavideo.com,📺 International-Media
+  - DOMAIN-SUFFIX,cbsi.com,📺 International-Media
+  - DOMAIN-SUFFIX,cbsivideo.com,📺 International-Media
+  - DOMAIN-SUFFIX,pplusstatic.com,📺 International-Media
+  - DOMAIN-SUFFIX,popcornflix.com,📺 International-Media
+  - DOMAIN-SUFFIX,popcornflix-prod.cloud.seachange.com,📺 International-Media
+
   - DOMAIN-SUFFIX,peacocktv.com,📺 International-Media
   - DOMAIN-SUFFIX,peacock.com,📺 International-Media
   - DOMAIN-SUFFIX,c4assets.com,📺 International-Media
