--- a/tv_rules.ini
+++ b/tv_rules.ini
@@ -5,7 +5,7 @@ rename_node=狮城@新加坡
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/tv_rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/tv_rules.yml
 
-exclude_remarks=(重置|流量|到期|套餐|剩余|EIP|Air)
+exclude_remarks=(重置|流量|到期|套餐|剩余|EIP|Air|德国|英国|韩国|阿根廷|巴西|法国|泰国|菲律宾|澳大利亚|加拿大|俄罗斯|土耳其|印度)
 
 enable_rule_generator=false
 overwrite_original_rules=true
