--- a/tv_rules.ini
+++ b/tv_rules.ini
@@ -1,6 +1,7 @@
 [custom]
 
 rename_node=狮城@新加坡
+rename_node=🇨🇳@🇹🇼
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/tv_rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/tv_rules.yml
