--- a/Dler_rules.ini
+++ b/Dler_rules.ini
@@ -5,7 +5,7 @@ rename_node=狮城@新加坡
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/Dler_rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Dler_rules.yml
 
-exclude_remarks=(重置|流量|到期|套餐|剩余|EIP)
+exclude_remarks=(重置|流量|到期|套餐|剩余)
 
 enable_rule_generator=false
 overwrite_original_rules=true
