--- a/Nexitally_rules.ini
+++ b/Nexitally_rules.ini
@@ -6,7 +6,7 @@ rename_node=🇨🇳@🇹🇼
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally_rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally_rules.yml
 
-exclude_remarks=(重置|流量|到期|套餐|剩余)
+exclude_remarks=(重置|流量|到期|套餐|剩余|工作室|请|全局代理)
 
 enable_rule_generator=false
 overwrite_original_rules=true
