--- a/Nexitally_rules.ini
+++ b/Nexitally_rules.ini
@@ -8,5 +8,6 @@ clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally
 
 exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记)
 
+udp=true
 enable_rule_generator=false
 overwrite_original_rules=true
