--- a/Dler_rules.ini
+++ b/Dler_rules.ini
@@ -8,5 +8,6 @@ clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Dler_rule
 
 exclude_remarks=(重置|流量|到期|套餐|剩余)
 
+udp=true
 enable_rule_generator=false
 overwrite_original_rules=true
