--- a/混合(热门国家，故障转移).ini
+++ b/混合(热门国家，故障转移).ini
@@ -8,5 +8,7 @@ clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally
 
 exclude_remarks=(俄罗斯|印度|加拿大|法国|英国|德国|菲律宾|土耳其|阿根廷|巴西|泰国|澳大利亚|Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记)
 
+udp=true
+sort=true
 enable_rule_generator=false
 overwrite_original_rules=true
