--- a/mix_rules.ini
+++ b/mix_rules.ini
@@ -3,7 +3,7 @@
 rename_node=狮城@新加坡
 rename_node=🇨🇳@🇹🇼
 
-custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/Nexi_fallback_rules.txt
+custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/mix_rules.yml
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally_rules.yml
 
 exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记)
