--- a/mix_rules.ini
+++ b/mix_rules.ini
@@ -3,8 +3,9 @@
 rename_node=狮城@新加坡
 rename_node=🇨🇳@🇹🇼
 
-custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/mix_rules.yml
-clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally_rules.yml
+custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/mix_rules.txt
+clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/mix_rules.yml
+
 
 exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记)
 
