--- a/Nexitally_rules.yml
+++ b/Nexitally_rules.yml
@@ -304,6 +304,81 @@ rules:
   - IP-CIDR,91.108.20.0/22,📢 Telegram
   - IP-CIDR,91.108.56.0/22,📢 Telegram
   - IP-CIDR,149.154.160.0/20,📢 Telegram
+  - 'DOMAIN-SUFFIX,achat-followers-instagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,acheter-followers-instagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,acheterdesfollowersinstagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,acheterfollowersinstagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,bookstagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,carstagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,cdninstagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,chickstagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,ig.me,♥ Instagram'
+  - 'DOMAIN-SUFFIX,igcdn.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,igsonar.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,igtv.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,imstagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,imtagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instaadder.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instachecker.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instafallow.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instafollower.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagainer.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagda.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagify.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagmania.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagor.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagr.am,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagram-brand.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagram-engineering.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagram-help.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagram-press.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagram-press.net,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramci.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramcn.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramdi.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramhashtags.net,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramhilecim.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramhilesi.org,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramium.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramizlenme.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramkusu.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramlogin.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramm.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramn.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagrampartners.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramphoto.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramq.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramsepeti.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramtakipcisatinal.net,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramtakiphilesi.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramtips.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagramtr.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagran.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagranm.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagrem.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagrm.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagtram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instagy.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instamgram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instangram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instanttelegram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instaplayer.net,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instastyle.tv,♥ Instagram'
+  - 'DOMAIN-SUFFIX,instgram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,intagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,intagrm.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,intgram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,kingstagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,lnstagram-help.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,oninstagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,online-instagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,onlineinstagram.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,theinstagramhack.com,♥ Instagram'
+  - 'DOMAIN-SUFFIX,web-instagram.net,♥ Instagram'
+  - 'DOMAIN-SUFFIX,wwwinstagram.com,♥ Instagram'
+  - 'DOMAIN-KEYWORD,instagram,♥ Instagram'
+  
   - DOMAIN-SUFFIX,flightpacific.net,Final
   - DOMAIN-SUFFIX,nexitallysecure.com,Final
   - DOMAIN-SUFFIX,nexitally.com,Final
