--- a/Nexitally_rules.ini
+++ b/Nexitally_rules.ini
@@ -1,7 +1,14 @@
 [custom]
-
-rename_node=狮城@新加坡
-rename_node=🇨🇳@🇹🇼
+rename_node=🇨🇳@🇼🇸
+rename_node=狮城@SG
+rename_node=新加坡@SG
+rename_node=韩国@KR
+rename_node=德国@DE
+rename_node=英国@UK
+rename_node=美国@US
+rename_node=台湾@TW
+rename_node=日本@JP
+rename_node=香港@HK
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally_rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally_rules.yml
@@ -10,5 +17,6 @@ exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余
 
 udp=true
 sort=true
-enable_rule_generator=false
-overwrite_original_rules=true
+remove_emoji=true
+add_emoji=true
+
