--- a/Nexitally_rules.ini
+++ b/Nexitally_rules.ini
@@ -1,14 +1,6 @@
 [custom]
 rename_node=🇨🇳@🇼🇸
-rename_node=狮城@SG
-rename_node=新加坡@SG
-rename_node=韩国@KR
-rename_node=德国@DE
-rename_node=英国@UK
-rename_node=美国@US
-rename_node=台湾@TW
-rename_node=日本@JP
-rename_node=香港@HK
+rename_node=狮城@新加坡
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally_rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally_rules.yml
