--- a/Nexi_热门地区.ini
+++ b/Nexi_热门地区.ini
@@ -7,7 +7,7 @@ custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/ma
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Nexitally_rules.yml
 
 exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记)
-include_remarks=(HK|US|TW|SG|JP|KR|Hong Kong|United States|Singapore|Japan|Korea|South Korea|AC|香港|新加坡|狮城|日本|美国|韩国|台湾)
+include_remarks=(HK|US|TW|SG|JP|KR|Hong Kong|United States|Singapore|Japan|Korea|South Korea|香港|新加坡|狮城|日本|美国|韩国|台湾)
 
 udp=true
 sort=true
