--- a/Dler_rules.ini
+++ b/Dler_rules.ini
@@ -6,7 +6,7 @@ rename_node=🇨🇳@🇹🇼
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/Dler_rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/Dler_rules.yml
 
-exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|ZA)
+exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|ZA|EIP)
 
 udp=true
 enable_rule_generator=false
