--- a/myrules.ini
+++ b/myrules.ini
@@ -5,7 +5,7 @@ rename_node=狮城@新加坡
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw01/rules/main/myrules.yml
 
-exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|ZA|EIP|海外|续费)
+exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|ZA|EIP|海外|续费|京|沪港|沪新|沪台)
 
 udp=true
 sort=true
